[package]
name = "horizon-plugin-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
anyhow = "1.0"
bytes = "1.10.1"
toml = "0.8.22"